--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,11 @@ POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_HOST=
 POSTGRES_PORT=
+SECRET_KEY=
+DEBUG=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
+TELEGRAM_TOKEN=
+TELEGRAM_URL=
